--- a/app/home.html
+++ b/app/home.html
@@ -90,23 +90,14 @@
                 <h1 class="people__h1">Play the Virtual<br>Stock Market<br>Win College Money</h1>
                 <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
                 <h3 class="people__h3"> Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.</h3>
-                <!--form.header__form.form-send-people-->
-                <!--    input.header__form-input(autocomplete="off" type='text' placeholder='Email' name="email")-->
-                <!--    button.header__form-btn(type='submit')-->
-                <!--        | JOIN the Wait List-->
-                <form class="validate header__form form-send-people" id="mc-embedded-subscribe-form" action="https://kapitall.us19.list-manage.com/subscribe/post?u=4bb9eac2b99ca9377f4d20ddc&amp;id=16152fceac" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="">
-                  <input class="email header__form-input" id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="Email" required="">
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                    <input type="text" name="b_4bb9eac2b99ca9377f4d20ddc_16152fceac" tabindex="-1" value="">
-                  </div>
-                  <div class="clear header__form-btn">
-                    <input id="mc-embedded-subscribe" type="submit" value="JOIN the Wait List" name="subscribe">
-                  </div>
+                <form class="header__form form-send-people" id="header-form" action="https://signumcity.us20.list-manage.com/subscribe/post-json?u=3d4a8a81e30027c8cb0afcd89&amp;id=eac01bd1ed&amp;c=?" method="post">
+                  <input class="email header__form-input" autocomplete="off" type="email" value="" name="EMAIL" placeholder="Email" required="">
+                  <input type="text" name="b_3d4a8a81e30027c8cb0afcd89_eac01bd1ed" tabindex="-1" value="" hidden>
+                  <button class="header__form-btn" type="submit" name="subscribe">JOIN the Wait List</button>
                 </form>
                 <p class="people__text">We don’t spam you, but will alert you when starting awesome contests</p>
               </div>
-              <div class="people__img wow slideInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div><img src="img/svg/People-with-money.svg">
+              <div class="people__img wow slideInRight" data-wow-duration="1s" data-wow-delay="0.2s"><img src="img/svg/People-with-money.svg"></div>
             </div>
           </div>
         </header>
@@ -143,9 +134,10 @@
               <div class="easy-money__form">
                 <h2 class="easy-money__form-h2 wow slideInLeft" data-wow-duration="1s" data-wow-delay="0">No boring scholarship essay!<br>Play stock investing games to win!</h2>
                 <div class="easy__form-outer wow fadeInUp" data-wow-duration="1s" data-wow-delay="0">
-                  <form class="easy__form form-send-easy">
-                    <input class="easy__form-input" type="text" placeholder="Email" name="email">
-                    <button class="easy__form-btn" type="submit">JOIN the Wait List</button>
+                  <form class="easy__form form-send-easy" id="easy-form" action="https://signumcity.us20.list-manage.com/subscribe/post-json?u=3d4a8a81e30027c8cb0afcd89&amp;id=eac01bd1ed&amp;c=?" method="post">
+                    <input class="easy__form-input" autocomplete="off" type="email" value="" name="EMAIL" placeholder="Email" required="">
+                    <input type="text" name="b_3d4a8a81e30027c8cb0afcd89_eac01bd1ed" tabindex="-1" value="" hidden>
+                    <button class="easy__form-btn" type="submit" name="subscribe">JOIN the Wait List</button>
                   </form>
                   <p class="easy__form-text">Hmm, still considering joining? We promise that we don’t bite, and we’ve had all our shots.</p>
                 </div>
@@ -206,9 +198,10 @@
               <div class="laptop__texts wow slideInLeft" data-wow-duration="0.7s" data-wow-delay="0">
                 <div class="laptop__texts-text">Please don’t make us beg, although<span> we’re not beneath that.</span></div>
                 <div class="laptop__texts-text-second">You know you want those $10,000 virtual dollars.</div>
-                <form class="laptop__form form-send-laptop">
-                  <input class="laptop__form-input" type="text" placeholder="Email" name="email">
-                  <button class="laptop__form-btn">JOIN the Wait List</button>
+                <form class="laptop__form form-send-laptop" id="laptop-form" action="https://signumcity.us20.list-manage.com/subscribe/post-json?u=3d4a8a81e30027c8cb0afcd89&amp;id=eac01bd1ed&amp;c=?" method="post">
+                  <input class="laptop__form-input" autocomplete="off" type="email" value="" name="EMAIL" placeholder="Email" required="">
+                  <input type="text" name="b_3d4a8a81e30027c8cb0afcd89_eac01bd1ed" tabindex="-1" value="" hidden>
+                  <button class="laptop__form-btn" type="submit" name="subscribe">JOIN the Wait List</button>
                 </form>
               </div>
               <div class="laptop__back wow slideInRight" data-wow-duration="0.7s" data-wow-delay="0"><img src="img/Saignum_laptop.png"></div>
@@ -217,7 +210,6 @@
         </section>
         <div class="congrats">
           <div class="congrats__img"><img src="img/svg/Congrats.svg"></div>
-          <p class="congrats__text">Congrats!<span>You are now оn the Wait List!</span></p>
           <button id="congrats-close"> Hurray!</button>
         </div>
       </div>
